--- a/authenticate/src/main/resources/application.yml
+++ b/authenticate/src/main/resources/application.yml
@@ -3,9 +3,20 @@ server:
 spring:
   application:
     name: authenticate
+  datasource:
+    url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+    username: root
+    password: 123456
+  jpa:
+    database: MySQL
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    show-sql: true
+    hibernate:
+      ddl-auto: update
 eureka:
   instance:
     prefer-ip-address: true #注册服务时使用服务的ip地址
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
+
