--- a/authenticate/src/main/resources/application.yml
+++ b/authenticate/src/main/resources/application.yml
@@ -18,10 +18,18 @@ spring:
       max-lifetime: 1800000
       connection-timeout: 30000
       connection-test-query: SELECT 1
+
+
+mybatis:
+    type-aliases-package: cn.zx.common.entity
+    mapper-locations: classpath:mapper/*.xml
 eureka:
   instance:
     prefer-ip-address: true #注册服务时使用服务的ip地址
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
+
+
+
 
